Add books handlers
